[gd_scene load_steps=6 format=3 uid="uid://ghrc36g4j2by"]

[ext_resource type="Script" path="res://map/cricle_map.gd" id="1_wa886"]
[ext_resource type="PackedScene" uid="uid://dnoc8l6gk82ee" path="res://player/player.tscn" id="2_g4qoe"]
[ext_resource type="Texture2D" uid="uid://dapy8oe4vov86" path="res://map/map_circle.png" id="4_8qhj7"]
[ext_resource type="PackedScene" uid="uid://do75tovfr1fr8" path="res://spinner/spinner.tscn" id="4_403tx"]

[sub_resource type="Curve2D" id="Curve2D_yqjoy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -296, -288, 0, 0, 0, 0, -296, -224, 0, 0, 0, 0, -40, -224, 0, 0, 0, 0, -40, 16, 0, 0, 0, 0, -552, 16, 0, 0, 0, 0, -552, -224, 0, 0, 0, 0, -296, -224, 0, 0, 0, 0, -296, -112)
}
point_count = 8

[node name="CricleMap" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_wa886")

[node name="MapCircle" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(320, 180)
texture = ExtResource("4_8qhj7")

[node name="WaveInterval" type="Timer" parent="."]
one_shot = true

[node name="Player" parent="." instance=ExtResource("2_g4qoe")]

[node name="MapPath" type="Path2D" parent="."]
position = Vector2(616, 288)
curve = SubResource("Curve2D_yqjoy")

[node name="PathObstacle" type="Area2D" parent="MapPath" groups=["Obstacle"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapPath/PathObstacle"]
position = Vector2(-450, -199)
polygon = PackedVector2Array(-118, -41, -118, 231, 426, 231, 426, -9, 394, -9, 394, 199, -86, 199, -86, -9, 138, -9, 138, 119, 170, 119, 170, -9, 426, -9, 426, -41, 170, -41, 170, -89, 138, -89, 138, -41)

[node name="Spinner" parent="." instance=ExtResource("4_403tx")]
position = Vector2(320, 192)
scale = Vector2(0.25, 0.25)

[connection signal="timeout" from="WaveInterval" to="." method="_on_wave_interval_timeout"]
